tests/baselines/reference/parserComputedPropertyName3.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName3.ts(1,11): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName3.ts (1 errors) ====
    var v = { [e]() { } };
              ~~~
!!! error TS9002: Computed property names are not currently supported.